[workspace]

[package]
name = "solana-randomness-worker"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arc-swap = "1.6.0"
async-trait = "0.1.74"
base58 = "0.2.0"
base64 = "0.21.5"
chrono = "0.4.31"
crossbeam = "0.8.2"
dashmap = { version = "5.5.3", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
flume = "0.11.0"
futures = "0.3"
futures-util = "0.3"
kv-log-macro = "1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
serde = "^1"
serde_json = "^1"
sha2 = "0.10.8"
solana-randomness-service = { path = "../programs/solana-randomness-service" }
switchboard-common = { version = "0.11.2", features = ["client", "ipfs"] }
switchboard-node = { version = "0.1" }
switchboard-solana = { version = "0.29.81", features = ["ipfs", "secrets"] }
tokio = { version = "^1", features = ["full"] }
tokio-graceful-shutdown = "0.14.2"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "serde_json",
] }
