[package]
name = "solana-randomness-consumer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_randomness_consumer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = "0.29.0"
solana-randomness-service = { path = "../solana-randomness-service", features = [
    "cpi",
] }
switchboard-solana = { package = "switchboard-solana-staging", version = "0.29.102" }
