[package]
name = "solana-randomness-service"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_randomness_service"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
all = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = "0.29.0"
bytemuck = "1.14.0"
switchboard-solana = { version = "0.29.81" }

# [target.'cfg(target_os = "solana")'.dependencies]
# solana-randomness-service-macros = { path = "../../crates/solana-randomness-service-macros" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
